--- a/notebooks/cancer.rmd
+++ b/notebooks/cancer.rmd
@@ -1,6 +1,6 @@
 ---
-title: "Advanced Regression Analysis using tidymodels"
-author: "Data Analyst"
+title: "Classification Analysis using tidymodels"
+author: "Chris Olande"
 date: "`r Sys.Date()`"
 output: 
   html_document:
