Intepret the distribution plot

--- a/notebooks/Cancer.ipynb
+++ b/notebooks/Cancer.ipynb
@@ -202,6 +202,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Observations**\n",
+    "1. Benign Cases (Dark Purple Bar - Left):\n",
+    "\n",
+    "    - The dataset contains 356 benign cases.\n",
+    "    - Benign tumors are non-cancerous and typically do not spread to other parts of the body.\n",
+    "\n",
+    "2. Malignant Cases (Yellow Bar - Right):\n",
+    "\n",
+    "   - The dataset includes 212 malignant cases.\n",
+    "   - Malignant tumors are cancerous and require early detection and treatment to prevent progression.\n",
+    "\n",
+    "3. Class Imbalance:\n",
+    "\n",
+    "   - The dataset has more benign cases than malignant cases, meaning that a machine learning model trained - - on this data may lean towards predicting benign cases more often unless class balancing techniques (such as oversampling, undersampling, or class weighting) are applied."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
