Interpret and document the feature distributions

--- a/notebooks/Cancer.ipynb
+++ b/notebooks/Cancer.ipynb
@@ -260,6 +260,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Observations**    \n",
+    "1. Feature Separation:\n",
+    "      -  Some features show clear separation between benign and malignant cases.\n",
+    "      -  Features like concave points, concavity, perimeter, radius, and area have higher values for  malignant tumors and lower values for benign tumors.\n",
+    "      -  This suggests these features are strong indicators for cancer diagnosis.\n",
+    "\n",
+    "2. Overlapping Distributions:\n",
+    "      -  Some features, like smoothness, symmetry, and texture, have overlapping distributions between benign and malignant cases.\n",
+    "      -  These features alone may not be as effective in distinguishing between the two diagnoses.\n",
+    "\n",
+    "3. Right-Skewed Distributions:\n",
+    "       - Features such as area, perimeter, radius, concavity, and concave points show a longer tail on the right for malignant cases, indicating that malignant tumors tend to have higher values for these attributes.\n",
+    "\n",
+    "4. Compactness and Fractal Dimension:\n",
+    "      -  These features also have noticeable differences, but their distributions have more overlap, meaning they might still contribute to classification but not as strongly as other features.\n",
+    "\n",
+    "**Implications for Machine Learning Models**:\n",
+    "\n",
+    "i. Features like concavity, perimeter, radius, area, and concave points could be important predictors for distinguishing malignant from benign tumors.\n",
+    "\n",
+    "ii. Some features may require feature selection or transformation techniques to improve model performance.\n",
+    "\n",
+    "iii. A classification model trained on these features should consider using feature importance analysis (e.g., Random Forest feature importance, PCA, or correlation analysis) to focus on the most relevant features."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
