Document key feature distributions by diagnosis

--- a/notebooks/Cancer.ipynb
+++ b/notebooks/Cancer.ipynb
@@ -346,7 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Observation**\n",
+    "**Observations**\n",
     "\n",
     "1. Strong Positive Correlations (Close to 1, Dark Green)\n",
     "\n",
@@ -402,6 +402,36 @@
     "  theme_minimal()\n",
     "  ggsave(filename = \"../results/Key Features by Diagnosis.png\", plot = p4, width = 8, height = 6, dpi = 300)\n",
     "p4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Observations**    \n",
+    "1. Area Mean:\n",
+    "- Malignant tumors tend to have significantly larger area values compared to benign tumors.\n",
+    "- The interquartile range (IQR) and median are higher for malignant cases.\n",
+    "- There are several outliers for malignant tumors with extremely high area values.\n",
+    "\n",
+    "2. Perimeter Mean:\n",
+    "- Malignant tumors have a higher perimeter on average.\n",
+    "- A clear separation is observed between benign and malignant cases, with the malignant group having a wider distribution.\n",
+    "- Outliers exist in both groups, but malignant cases show extreme values.\n",
+    "\n",
+    "3. Concave Points Mean:\n",
+    "- Malignant tumors tend to have more concave points, which means they have more irregular, concave-shaped boundaries.\n",
+    "- There are many outliers in the malignant group, suggesting variability in this feature.\n",
+    "\n",
+    "4. Radius Mean:\n",
+    "- Malignant tumors have a larger average radius compared to benign ones.\n",
+    "- This further supports the correlation seen in the previous correlation matrix—radius, perimeter, and area are highly correlated.\n",
+    "\n",
+    "***Key Insights***:\n",
+    "\n",
+    "- All four features show clear separation between benign and malignant tumors.\n",
+    "- Area, perimeter, and radius are strongly correlated, meaning they may contribute redundant information in a predictive model.\n",
+    "- Concave points mean is an important feature, as it captures tumor boundary irregularities, a strong sign of malignancy."
    ]
   },
   {
