Add documentation for distribution of mean features by diagnosis

--- a/notebooks/Cancer.ipynb
+++ b/notebooks/Cancer.ipynb
@@ -479,6 +479,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Observation**\n",
+    "- area_mean, perimeter_mean, radius_mean: Malignant tumors tend to have higher values, indicating that they are generally larger in size compared to benign tumors.\n",
+    "concavity_mean, concave_points_mean, compactness_mean: Malignant tumors exhibit a higher concentration of these values, suggesting that they have more irregular and invasive boundaries.\n",
+    "- fractal_dimension_mean: The distributions are more overlapping, indicating that this feature may not be as strongly discriminative as others.\n",
+    "- smoothness_mean, symmetry_mean, texture_mean: These features show some degree of separation, but not as distinct as size and shape-related metrics."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
