Add feature importance ranking based on effect size

--- a/notebooks/Cancer.ipynb
+++ b/notebooks/Cancer.ipynb
@@ -863,6 +863,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Insights**\n",
+    "1. Top Features:\n",
+    "\n",
+    "    Perimeter_worst, radius_worst, and area_worst have the highest effect sizes, indicating that the worst-case measurements of tumor size are the strongest predictors.\n",
+    "    Concave_points_worst and concave_points_mean are also highly influential, suggesting that shape-related features play a critical role in classification.\n",
+    "\n",
+    "2. Mid-Tier Features:\n",
+    "\n",
+    "    Perimeter_mean, area_mean, and concavity_mean contribute significantly, but their impact is slightly lower than worst-case measurements.\n",
+    "\n",
+    "3. Lower Impact Features:\n",
+    "\n",
+    "    Compactness_mean and compactness_worst show the least importance, suggesting they contribute less to distinguishing between benign and malignant cases."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Statistical tests and Analysis\n",
     "\n",
     "\n",
