Add violin plots for top 4 discriminating features

--- a/notebooks/Cancer.ipynb
+++ b/notebooks/Cancer.ipynb
@@ -1116,6 +1116,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Insights**\n",
+    "1. Area Worst & Perimeter Worst\n",
+    "\n",
+    "    - Malignant tumors tend to have significantly larger worst-case areas and perimeters than benign ones.\n",
+    "    - The spread in malignant cases is much wider, indicating greater variability.\n",
+    "\n",
+    "2. Concave Points Worst\n",
+    "\n",
+    "    - Malignant cases exhibit more concave points, suggesting more irregular tumor shapes.\n",
+    "    - Benign tumors have a more compact and lower distribution of concave points.\n",
+    "\n",
+    "3. Radius Worst\n",
+    "\n",
+    "    - Malignant tumors generally have a larger worst-case radius than benign ones.\n",
+    "    - The distribution for malignant cases is more spread out."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Hypothesis Tests and Effect Sizes\n",
     "\n",
     "### Hypothesis 1: Malignant tumors have significantly different mean radius compared to benign tumors\n",
