import utils and schemas packages

--- a/notebooks/cancer_spark.ipynb
+++ b/notebooks/cancer_spark.ipynb
@@ -1,5 +1,23 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "48837796",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os,sys\n",
+    "project_root = os.path.abspath(os.path.join(os.getcwd(),\"..\"))\n",
+    "\n",
+    "if project_root  not in sys.path:\n",
+    "    sys.path.insert(0,project_root)\n",
+    "\n",
+    "from utils import create_spark_session\n",
+    "from schemas import cancer_schema"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "spark310",
@@ -7,7 +25,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.18"
   }
  },
