use spark session in cancer_spark.ipynb

--- a/notebooks/cancer_spark.ipynb
+++ b/notebooks/cancer_spark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "48837796",
    "metadata": {},
    "outputs": [],
@@ -15,6 +15,24 @@
     "\n",
     "from utils import create_spark_session\n",
     "from schemas import cancer_schema"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9559dd69",
+   "metadata": {},
+   "source": [
+    "### Use spark and cancer_schema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b60b26d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark = create_spark_session(\"Cancer analysis\")\n"
    ]
   }
  ],
