--- a/notebooks/cancer_spark.ipynb
+++ b/notebooks/cancer_spark.ipynb
@@ -22,7 +22,7 @@
    "id": "9559dd69",
    "metadata": {},
    "source": [
-    "### Use spark and cancer_schema"
+    "### Use spark session"
    ]
   },
   {
@@ -33,6 +33,59 @@
    "outputs": [],
    "source": [
     "spark = create_spark_session(\"Cancer analysis\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "daeaee87",
+   "metadata": {},
+   "source": [
+    "### Load and read dataset using spark,inferschema - cancer_schema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "cc2d5a6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+---------+-----------+------------+--------------+---------+---------------+----------------+--------------+-------------------+-------------+----------------------+---------+----------+------------+-------+-------------+--------------+------------+-----------------+-----------+--------------------+------------+-------------+---------------+----------+----------------+-----------------+---------------+--------------------+--------------+-----------------------+\n",
+      "|id      |diagnosis|radius_mean|texture_mean|perimeter_mean|area_mean|smoothness_mean|compactness_mean|concavity_mean|concave_points_mean|symmetry_mean|fractal_dimension_mean|radius_se|texture_se|perimeter_se|area_se|smoothness_se|compactness_se|concavity_se|concave_points_se|symmetry_se|fractal_dimension_se|radius_worst|texture_worst|perimeter_worst|area_worst|smoothness_worst|compactness_worst|concavity_worst|concave_points_worst|symmetry_worst|fractal_dimension_worst|\n",
+      "+--------+---------+-----------+------------+--------------+---------+---------------+----------------+--------------+-------------------+-------------+----------------------+---------+----------+------------+-------+-------------+--------------+------------+-----------------+-----------+--------------------+------------+-------------+---------------+----------+----------------+-----------------+---------------+--------------------+--------------+-----------------------+\n",
+      "|842302  |M        |17.99      |10.38       |122.8         |1001.0   |0.1184         |0.2776          |0.3001        |0.1471             |0.2419       |0.07871               |1.095    |0.9053    |8.589       |153.4  |0.006399     |0.04904       |0.05373     |0.01587          |0.03003    |0.006193            |25.38       |17.33        |184.6          |2019.0    |0.1622          |0.6656           |0.7119         |0.2654              |0.4601        |0.1189                 |\n",
+      "|842517  |M        |20.57      |17.77       |132.9         |1326.0   |0.08474        |0.07864         |0.0869        |0.07017            |0.1812       |0.05667               |0.5435   |0.7339    |3.398       |74.08  |0.005225     |0.01308       |0.0186      |0.0134           |0.01389    |0.003532            |24.99       |23.41        |158.8          |1956.0    |0.1238          |0.1866           |0.2416         |0.186               |0.275         |0.08902                |\n",
+      "|84300903|M        |19.69      |21.25       |130.0         |1203.0   |0.1096         |0.1599          |0.1974        |0.1279             |0.2069       |0.05999               |0.7456   |0.7869    |4.585       |94.03  |0.00615      |0.04006       |0.03832     |0.02058          |0.0225     |0.004571            |23.57       |25.53        |152.5          |1709.0    |0.1444          |0.4245           |0.4504         |0.243               |0.3613        |0.08758                |\n",
+      "|84348301|M        |11.42      |20.38       |77.58         |386.1    |0.1425         |0.2839          |0.2414        |0.1052             |0.2597       |0.09744               |0.4956   |1.156     |3.445       |27.23  |0.00911      |0.07458       |0.05661     |0.01867          |0.05963    |0.009208            |14.91       |26.5         |98.87          |567.7     |0.2098          |0.8663           |0.6869         |0.2575              |0.6638        |0.173                  |\n",
+      "|84358402|M        |20.29      |14.34       |135.1         |1297.0   |0.1003         |0.1328          |0.198         |0.1043             |0.1809       |0.05883               |0.7572   |0.7813    |5.438       |94.44  |0.01149      |0.02461       |0.05688     |0.01885          |0.01756    |0.005115            |22.54       |16.67        |152.2          |1575.0    |0.1374          |0.205            |0.4            |0.1625              |0.2364        |0.07678                |\n",
+      "+--------+---------+-----------+------------+--------------+---------+---------------+----------------+--------------+-------------------+-------------+----------------------+---------+----------+------------+-------+-------------+--------------+------------+-----------------+-----------+--------------------+------------+-------------+---------------+----------+----------------+-----------------+---------------+--------------------+--------------+-----------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "25/08/09 09:38:52 WARN CSVHeaderChecker: Number of column in CSV header is not equal to number of fields in the schema:\n",
+      " Header length: 33, schema size: 32\n",
+      "CSV file: file:///home/realelvo/Desktop/Projects/CancerAnalysis/datasets/Cancer_Data.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "dataset_path = os.path.abspath(os.path.join(os.getcwd(), \"..\", \"datasets\", \"Cancer_Data.csv\"))\n",
+    "\n",
+    "cancer_df = spark.read.format('csv')\\\n",
+    "            .option(\"header\",True)\\\n",
+    "            .schema(cancer_schema)\\\n",
+    "            .load(dataset_path)\\\n",
+    "\n",
+    "cancer_df.show(5,truncate=False)\n"
    ]
   }
  ],
