--- a/notebooks/cancer_spark.ipynb
+++ b/notebooks/cancer_spark.ipynb
@@ -90,17 +90,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "9216c403",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 8:>                                                          (0 + 1) / 1]\r"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -112,20 +105,47 @@
       "+---+---------+-----------+------------+--------------+---------+---------------+----------------+--------------+-------------------+-------------+----------------------+---------+----------+------------+-------+-------------+--------------+------------+-----------------+-----------+--------------------+------------+-------------+---------------+----------+----------------+-----------------+---------------+--------------------+--------------+-----------------------+\n",
       "\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
     }
    ],
    "source": [
     "from pyspark.sql import functions as F\n",
     "\n",
-    "# Count total nulls per column\n",
     "cancer_df.select([F.count(F.when(F.col(c).isNull() | (F.col(c) == \"\"), c)).alias(c) for c in cancer_df.columns]).show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c85e5d1",
+   "metadata": {},
+   "source": [
+    "# Remove duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "ef892da1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total row count is:569\n",
+      "Total unique rows:569\n",
+      "Total duplicate rows:0\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_rows = cancer_df.count()\n",
+    "print(f\"Total row count is:{total_rows}\")\n",
+    "\n",
+    "unique_rows = cancer_df.dropDuplicates().count()\n",
+    "print(f\"Total unique rows:{unique_rows}\")\n",
+    "\n",
+    "duplicate_rows = total_rows - unique_rows\n",
+    "print(f\"Total duplicate rows:{duplicate_rows}\")"
    ]
   }
  ],
