Explatory Data Analysis

--- a/notebooks/cancer_spark.ipynb
+++ b/notebooks/cancer_spark.ipynb
@@ -147,6 +147,68 @@
     "duplicate_rows = total_rows - unique_rows\n",
     "print(f\"Total duplicate rows:{duplicate_rows}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb91d3fc",
+   "metadata": {},
+   "source": [
+    "# EDA \n",
+    "### Basic structure of the dataset \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "2dc8a86b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows:569,Columns:32\n",
+      "root\n",
+      " |-- id: string (nullable = true)\n",
+      " |-- diagnosis: string (nullable = true)\n",
+      " |-- radius_mean: double (nullable = true)\n",
+      " |-- texture_mean: double (nullable = true)\n",
+      " |-- perimeter_mean: double (nullable = true)\n",
+      " |-- area_mean: double (nullable = true)\n",
+      " |-- smoothness_mean: double (nullable = true)\n",
+      " |-- compactness_mean: double (nullable = true)\n",
+      " |-- concavity_mean: double (nullable = true)\n",
+      " |-- concave_points_mean: double (nullable = true)\n",
+      " |-- symmetry_mean: double (nullable = true)\n",
+      " |-- fractal_dimension_mean: double (nullable = true)\n",
+      " |-- radius_se: double (nullable = true)\n",
+      " |-- texture_se: double (nullable = true)\n",
+      " |-- perimeter_se: double (nullable = true)\n",
+      " |-- area_se: double (nullable = true)\n",
+      " |-- smoothness_se: double (nullable = true)\n",
+      " |-- compactness_se: double (nullable = true)\n",
+      " |-- concavity_se: double (nullable = true)\n",
+      " |-- concave_points_se: double (nullable = true)\n",
+      " |-- symmetry_se: double (nullable = true)\n",
+      " |-- fractal_dimension_se: double (nullable = true)\n",
+      " |-- radius_worst: double (nullable = true)\n",
+      " |-- texture_worst: double (nullable = true)\n",
+      " |-- perimeter_worst: double (nullable = true)\n",
+      " |-- area_worst: double (nullable = true)\n",
+      " |-- smoothness_worst: double (nullable = true)\n",
+      " |-- compactness_worst: double (nullable = true)\n",
+      " |-- concavity_worst: double (nullable = true)\n",
+      " |-- concave_points_worst: double (nullable = true)\n",
+      " |-- symmetry_worst: double (nullable = true)\n",
+      " |-- fractal_dimension_worst: double (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Rows:{cancer_df.count()},Columns:{len(cancer_df.columns)}\")\n",
+    "cancer_df.printSchema()\n"
+   ]
   }
  ],
  "metadata": {
