Spark MLLib importd for classification

--- a/notebooks/cancer_spark.ipynb
+++ b/notebooks/cancer_spark.ipynb
@@ -291,6 +291,38 @@
    "source": [
     "cancer_df.groupBy(\"diagnosis\").count().show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78171e47",
+   "metadata": {},
+   "source": [
+    "# Spark MLlib imports for classification\n",
+    "### StringIndexer – Converts string labels (M, B) into numeric labels for ML algorithms.\n",
+    "\n",
+    "### VectorAssembler – Combines multiple feature columns into a single vector column (features).\n",
+    "\n",
+    "### StandardScaler – Scales features to have zero mean and unit variance (optional but improves performance).\n",
+    "### LogisticRegression, DecisionTreeClassifier, RandomForestClassifier – Different classification algorithms available in Spark MLlib.\n",
+    "\n",
+    "### MulticlassClassificationEvaluator – Measures model performance (accuracy, precision, recall, F1 score).\n",
+    "\n",
+    "### Pipeline – Chains all transformation and model steps together into one workflow."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "20e9856e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from pyspark.ml.feature import StringIndexer, VectorAssembler, StandardScaler\n",
+    "from pyspark.ml.classification import LogisticRegression, DecisionTreeClassifier, RandomForestClassifier\n",
+    "from pyspark.ml.evaluation import MulticlassClassificationEvaluator\n",
+    "from pyspark.ml import Pipeline\n"
+   ]
   }
  ],
  "metadata": {
