--- a/notebooks/cancer_spark.ipynb
+++ b/notebooks/cancer_spark.ipynb
@@ -323,6 +323,25 @@
     "from pyspark.ml.evaluation import MulticlassClassificationEvaluator\n",
     "from pyspark.ml import Pipeline\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4322cb84",
+   "metadata": {},
+   "source": [
+    "# Convert target column into numeric form, we use StringIndexer\n",
+    "### Convert 'diagnosis' from M/B to numeric (1/0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "5e8b019f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_indexer = StringIndexer(inputCol=\"features\",outputCol=\"label\")"
+   ]
   }
  ],
  "metadata": {
