assemble features into a single vector

--- a/notebooks/cancer_spark.ipynb
+++ b/notebooks/cancer_spark.ipynb
@@ -342,6 +342,26 @@
    "source": [
     "label_indexer = StringIndexer(inputCol=\"features\",outputCol=\"label\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43a46551",
+   "metadata": {},
+   "source": [
+    "## Assemble features into a single vector\n",
+    "### Exclude 'diagnosis' ,'id'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "8be53c52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_cols = [col for col in cancer_df.columns if col not in (\"diagnosis\",\"id\")]\n",
+    "assembler = VectorAssembler(inputCols=feature_cols,outputCol=\"features\")\n"
+   ]
   }
  ],
  "metadata": {
