choose a classfication model

--- a/notebooks/cancer_spark.ipynb
+++ b/notebooks/cancer_spark.ipynb
@@ -362,6 +362,24 @@
     "feature_cols = [col for col in cancer_df.columns if col not in (\"diagnosis\",\"id\")]\n",
     "assembler = VectorAssembler(inputCols=feature_cols,outputCol=\"features\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83630225",
+   "metadata": {},
+   "source": [
+    "### Choose a classfication a model,we will use LogisticRegression,or Decision Tree and Random Forest later"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "02505b86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr = LogisticRegression(featuresCol=\"features\",labelCol=\"label\")"
+   ]
   }
  ],
  "metadata": {
