chain all transformations and model steps in a Pipeline

--- a/notebooks/cancer_spark.ipynb
+++ b/notebooks/cancer_spark.ipynb
@@ -380,6 +380,24 @@
    "source": [
     "lr = LogisticRegression(featuresCol=\"features\",labelCol=\"label\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "690f1a7c",
+   "metadata": {},
+   "source": [
+    "### Use Pipeline to chain all transformations and model steps in one workflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "46b10678",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline = Pipeline(stages=[label_indexer,assembler,lr])"
+   ]
   }
  ],
  "metadata": {
