split cancer data into train and test datasets

--- a/notebooks/cancer_spark.ipynb
+++ b/notebooks/cancer_spark.ipynb
@@ -398,6 +398,24 @@
    "source": [
     "pipeline = Pipeline(stages=[label_indexer,assembler,lr])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b602863",
+   "metadata": {},
+   "source": [
+    "### split cancer_df into train_df,test_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "5625b32e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df,test_df = cancer_df.randomSplit([0.8,0.2],seed=42)"
+   ]
   }
  ],
  "metadata": {
