code refactor on StringIndexer

--- a/notebooks/cancer_spark.ipynb
+++ b/notebooks/cancer_spark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "48837796",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 68,
    "id": "b60b26d1",
    "metadata": {},
    "outputs": [],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 79,
    "id": "20e9856e",
    "metadata": {},
    "outputs": [],
@@ -321,7 +321,9 @@
     "from pyspark.ml.feature import StringIndexer, VectorAssembler, StandardScaler\n",
     "from pyspark.ml.classification import LogisticRegression, DecisionTreeClassifier, RandomForestClassifier\n",
     "from pyspark.ml.evaluation import MulticlassClassificationEvaluator\n",
-    "from pyspark.ml import Pipeline\n"
+    "from pyspark.ml import Pipeline\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -335,12 +337,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 80,
    "id": "5e8b019f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "label_indexer = StringIndexer(inputCol=\"features\",outputCol=\"label\")"
+    "label_indexer = StringIndexer(inputCol=\"diagnosis\",outputCol=\"label\")"
    ]
   },
   {
@@ -354,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 81,
    "id": "8be53c52",
    "metadata": {},
    "outputs": [],
@@ -373,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 82,
    "id": "02505b86",
    "metadata": {},
    "outputs": [],
@@ -391,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 83,
    "id": "46b10678",
    "metadata": {},
    "outputs": [],
@@ -409,12 +411,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 84,
    "id": "5625b32e",
    "metadata": {},
    "outputs": [],
    "source": [
     "train_df,test_df = cancer_df.randomSplit([0.8,0.2],seed=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01a3e3f1",
+   "metadata": {},
+   "source": [
+    "### fit the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "a8ddc145",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "model = pipeline.fit(train_df)"
    ]
   }
  ],
