--- a/notebooks/cancer_spark.ipynb
+++ b/notebooks/cancer_spark.ipynb
@@ -444,6 +444,24 @@
    "source": [
     "model = pipeline.fit(train_df)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8681f06",
+   "metadata": {},
+   "source": [
+    "### Make predictions "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "e6ca62bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = model.transform(test_df)"
+   ]
   }
  ],
  "metadata": {
