check prediction correctness

--- a/notebooks/cancer_spark.ipynb
+++ b/notebooks/cancer_spark.ipynb
@@ -462,6 +462,100 @@
    "source": [
     "predictions = model.transform(test_df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "c0f922a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+-----+----------+-----------+\n",
+      "|diagnosis|label|prediction|probability|\n",
+      "+---------+-----+----------+-----------+\n",
+      "|M        |1.0  |1.0       |[0.0,1.0]  |\n",
+      "|M        |1.0  |1.0       |[0.0,1.0]  |\n",
+      "|M        |1.0  |1.0       |[0.0,1.0]  |\n",
+      "|M        |1.0  |0.0       |[1.0,0.0]  |\n",
+      "|B        |0.0  |0.0       |[1.0,0.0]  |\n",
+      "|M        |1.0  |1.0       |[0.0,1.0]  |\n",
+      "|M        |1.0  |1.0       |[0.0,1.0]  |\n",
+      "|M        |1.0  |1.0       |[0.0,1.0]  |\n",
+      "|M        |1.0  |1.0       |[0.0,1.0]  |\n",
+      "|B        |0.0  |0.0       |[1.0,0.0]  |\n",
+      "+---------+-----+----------+-----------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions.select(\"diagnosis\", \"label\", \"prediction\", \"probability\").show(10, truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ca1004a",
+   "metadata": {},
+   "source": [
+    "### check prediction correctness\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "0dc6c55a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+-----+----------+-----------+-----------+\n",
+      "|diagnosis|label|prediction|probability|correctness|\n",
+      "+---------+-----+----------+-----------+-----------+\n",
+      "|M        |1.0  |1.0       |[0.0,1.0]  |1          |\n",
+      "|M        |1.0  |1.0       |[0.0,1.0]  |1          |\n",
+      "|M        |1.0  |1.0       |[0.0,1.0]  |1          |\n",
+      "|M        |1.0  |0.0       |[1.0,0.0]  |0          |\n",
+      "|B        |0.0  |0.0       |[1.0,0.0]  |1          |\n",
+      "|M        |1.0  |1.0       |[0.0,1.0]  |1          |\n",
+      "|M        |1.0  |1.0       |[0.0,1.0]  |1          |\n",
+      "|M        |1.0  |1.0       |[0.0,1.0]  |1          |\n",
+      "|M        |1.0  |1.0       |[0.0,1.0]  |1          |\n",
+      "|B        |0.0  |0.0       |[1.0,0.0]  |1          |\n",
+      "|M        |1.0  |1.0       |[0.0,1.0]  |1          |\n",
+      "|B        |0.0  |0.0       |[1.0,0.0]  |1          |\n",
+      "|B        |0.0  |0.0       |[1.0,0.0]  |1          |\n",
+      "|B        |0.0  |0.0       |[1.0,0.0]  |1          |\n",
+      "|M        |1.0  |1.0       |[0.0,1.0]  |1          |\n",
+      "|B        |0.0  |0.0       |[1.0,0.0]  |1          |\n",
+      "|M        |1.0  |1.0       |[0.0,1.0]  |1          |\n",
+      "|M        |1.0  |1.0       |[0.0,1.0]  |1          |\n",
+      "|B        |0.0  |0.0       |[1.0,0.0]  |1          |\n",
+      "|B        |0.0  |0.0       |[1.0,0.0]  |1          |\n",
+      "+---------+-----+----------+-----------+-----------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import when\n",
+    "prediction_correctness = predictions.withColumn(\n",
+    "    \"correctness\",\n",
+    "    when(predictions.label == predictions.prediction,1).otherwise(0)\n",
+    "\n",
+    ")\n",
+    "\n",
+    "prediction_correctness.select(\n",
+    "    \"diagnosis\", \"label\", \"prediction\", \"probability\", \"correctness\"\n",
+    ").show(truncate=False)"
+   ]
   }
  ],
  "metadata": {
